--- a/src/views/account-deleted.ejs
+++ b/src/views/account-deleted.ejs
@@ -1,4 +1,3 @@
-ejs -->
 <!DOCTYPE html>
 <html lang="it">
 <head>
@@ -22,5 +21,6 @@ ejs -->
             </div>
         </div>
     </div>
+    <script src="/js/build.js"></script>
 </body>
 </html>
