--- a/src/views/error.ejs
+++ b/src/views/error.ejs
@@ -30,7 +30,7 @@
                             <a href="/" class="btn btn-primary mr-3 mb-2">
                                 <i class="fas fa-home mr-2"></i>Vai alla home
                             </a>
-                            <% if (locals.user) { %>
+                            <% if (locals.user || locals.showLogout) { %>
                                 <a href="/auth/logout" class="btn btn-danger mb-2">
                                     <i class="fas fa-sign-out-alt mr-2"></i>Logout
                                 </a>
