--- a/src/views/about.ejs
+++ b/src/views/about.ejs
@@ -98,7 +98,7 @@
                 <div class="row">
                     <div class="col-lg-3 col-md-6 mb-4">
                         <div class="card border-0 shadow-sm h-100">
-                            <img src="img/loiacono.png" alt="Flavio LOIACONO" class="card-img-top">
+                            <img src="/img/loiacono.png" alt="Flavio LOIACONO" class="card-img-top">
                             <div class="card-body text-center">
                                 <h5 class="card-title font-weight-bold mb-0">Flavio LOIACONO</h5>
                                 <p class="text-muted small">Progettista Web</p>
@@ -112,7 +112,7 @@
                     </div>
                     <div class="col-lg-3 col-md-6 mb-4">
                         <div class="card border-0 shadow-sm h-100">
-                            <img src="img/risola.png" alt="Simone Risola" class="card-img-top">
+                            <img src="/img/risola.png" alt="Simone Risola" class="card-img-top">
                             <div class="card-body text-center">
                                 <h5 class="card-title font-weight-bold mb-0">Simone RISOLA</h5>
                                 <p class="text-muted small">Developer</p>
@@ -126,7 +126,7 @@
                     </div>
                     <div class="col-lg-3 col-md-6 mb-4">
                         <div class="card border-0 shadow-sm h-100">
-                            <img src="img/paradiso.png" alt="Francesco Paradiso" class="card-img-top">
+                            <img src="<%= baseURL %>/img/paradiso.png" alt="Francesco Paradiso" class="card-img-top">
                             <div class="card-body text-center">
                                 <h5 class="card-title font-weight-bold mb-0">Francesco PARADISO</h5>
                                 <p class="text-muted small">Responsabile di progetto</p>
@@ -140,7 +140,7 @@
                     </div>
                     <div class="col-lg-3 col-md-6 mb-4">
                         <div class="card border-0 shadow-sm h-100">
-                            <img src="img/mazzone.png" alt="Gianluca Mazzone" class="card-img-top">
+                            <img src="/img/mazzone.png" alt="Gianluca Mazzone" class="card-img-top">
                             <div class="card-body text-center">
                                 <h5 class="card-title font-weight-bold mb-0">Gianluca MAZZONE</h5>
                                 <p class="text-muted small">Analista</p>
