--- a/src/views/about.ejs
+++ b/src/views/about.ejs
@@ -126,7 +126,7 @@
                     </div>
                     <div class="col-lg-3 col-md-6 mb-4">
                         <div class="card border-0 shadow-sm h-100">
-                            <img src="<%= baseURL %>/img/paradiso.png" alt="Francesco Paradiso" class="card-img-top">
+                            <img src="/img/paradiso.png" alt="Francesco Paradiso" class="card-img-top">
                             <div class="card-body text-center">
                                 <h5 class="card-title font-weight-bold mb-0">Francesco PARADISO</h5>
                                 <p class="text-muted small">Responsabile di progetto</p>
