--- a/src/views/about.ejs
+++ b/src/views/about.ejs
@@ -96,7 +96,7 @@
                     <p class="lead">Un gruppo di professionisti appassionati di tecnologia e dediti all'assistenza</p>
                 </div>
                 <div class="row">
-                    <div class="col-lg-3 col-md-6 mb-4">
+                    <div class="col-lg-3 col-md-6 mb-4 mt-2">
                         <div class="card border-0 shadow-sm h-100">
                             <img src="/img/loiacono.png" alt="Flavio LOIACONO" class="card-img-top">
                             <div class="card-body text-center">
@@ -110,7 +110,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-lg-3 col-md-6 mb-4">
+                    <div class="col-lg-3 col-md-6 mb-4 mt-2">
                         <div class="card border-0 shadow-sm h-100">
                             <img src="/img/risola.png" alt="Simone Risola" class="card-img-top">
                             <div class="card-body text-center">
@@ -124,7 +124,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-lg-3 col-md-6 mb-4">
+                    <div class="col-lg-3 col-md-6 mb-4 mt-2">
                         <div class="card border-0 shadow-sm h-100">
                             <img src="/img/paradiso.png" alt="Francesco Paradiso" class="card-img-top">
                             <div class="card-body text-center">
@@ -138,7 +138,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-lg-3 col-md-6 mb-4">
+                    <div class="col-lg-3 col-md-6 mb-4 mt-2">
                         <div class="card border-0 shadow-sm h-100">
                             <img src="/img/mazzone.png" alt="Gianluca Mazzone" class="card-img-top">
                             <div class="card-body text-center">
